fix scrollbars

--- a/src/app/maze/maze.component.scss
+++ b/src/app/maze/maze.component.scss
@@ -1,7 +1,7 @@
 .maze-container {
     display: flex;
     flex-direction: column;
-    overflow: scroll;
+    overflow: auto;
     margin: 5px;
 }
 
